# nanabonana-agent-public

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh  setup.sh
jobs/: example.json
nanobanana/: __init__.py  batch.py  cli.py  config.py  generator.py  utils.py
